[package]
name = "mohr-codes-api"
version = "0.1.0"
authors = ["Sam Mohr <sam@mohr.codes>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ignore = "0.4"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.8"
juniper = "0.15"
thiserror = "1"
env_logger = "0.8"
log = "0.4"
warp = "0.2"
juniper_warp = "0.6"
clap = "3.0.0-beta.2"
tokio = { version = "0.2", features = ["macros"] }
